; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv_print.c_jv_dump_string.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv_print.c_jv_dump_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @jv_dump_string(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = call i32 @jv_string(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  store i32 %6, i32* %5, align 4
  %7 = call i32 (...) @tsd_dtoa_context_get()
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @jv_dump_term(i32 %7, i32 %8, i32 %9, i32 0, i32 0, i32* %5)
  %11 = load i32, i32* %5, align 4
  ret i32 %11
}

declare dso_local i32 @jv_string(i8*) #1

declare dso_local i32 @jv_dump_term(i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @tsd_dtoa_context_get(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
